@@ -119,7 +119,7 @@ REPOZIPURL = 'https://'
 # Enable Notification screen Yes or No
 ENABLE = 'No'
 # Url to notification file
-NOTIFICATION = 'https://kodi7rd.github.io/wizard/assets/quick_update_notify/test.txt'
+NOTIFICATION = 'https://kodi7rd.github.io/wizard/assets/quick_update_notify/kodirdil.txt'
 # Use either 'Text' or 'Image'
 HEADERTYPE = 'Image'
 # Font size of header
@@ -131,10 +131,4 @@ HEADERIMAGE = os.path.join(CUSTOM_ART, 'kodi_rd_il_icon.png')
 FONTSETTINGS = 'Font13'
 # Background for Notification Window
 BACKGROUND = 'http://'
-#########################################################
-
-# KODI-RD-IL - Quick Update Notification Files
-QUICK_UPDATE_NOTIFICATION_FILE_ESTUARY = 'https://kodi7rd.github.io/wizard/assets/quick_update_notify/Estuary.txt'
-QUICK_UPDATE_NOTIFICATION_FILE_FENTASTIC = 'https://kodi7rd.github.io/wizard/assets/quick_update_notify/FENtastic.txt'
-QUICK_UPDATE_NOTIFICATION_FILE_KODI_RD_IL = 'https://kodi7rd.github.io/wizard/assets/quick_update_notify/kodirdil.txt'
 #########################################################
